--- a/Section-33/Aula01/index.html
+++ b/Section-33/Aula01/index.html
@@ -3,6 +3,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head> <!--Tag responsavel pelos metadados do documento HTML-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!--
+            A viewport foi uma tag introduzida pela Apple para o safari, para a
+            tela se adptar com a resolução do celular
+        -->
         <meta charset="utf-8"/>
         <title> Titulo da pagina</title>
     </head>
