Aula19 - Unidades de medidas no CSS (px, rem, em, vw, vh, %)

--- a/Section-33/Aula19/index.html
+++ b/Section-33/Aula19/index.html
@@ -15,5 +15,16 @@
     <h2>Medidas Relativas</h2>
     <p>
         As medidas relativas em CSS oferecem uma abordagem flexível e adaptável no design de páginas web, permitindo que os elementos se ajustem proporcionalmente a diferentes contextos e tamanhos de tela. Unidades como porcentagem (%), viewport width (vw), viewport height (vh), em (em) e rem (rem) são exemplos de medidas relativas amplamente utilizadas. A porcentagem, por exemplo, permite definir dimensões com base em uma fração do elemento pai, facilitando a criação de layouts responsivos. As unidades vw e vh referem-se à largura e altura da janela de visualização, respectivamente, sendo valiosas para garantir a adaptabilidade a diferentes dispositivos. Já em e rem são unidades relativas ao tamanho da fonte, proporcionando uma maneira consistente e escalável de definir tamanhos de texto e espaçamentos em relação à hierarquia do documento. Ao contrário das medidas absolutas, as relativas se destacam pela capacidade de resposta, promovendo uma experiência de usuário mais consistente em diversas plataformas e dispositivos.</p>
+    <h2>Exemplo de landing page, usando a unidade(vh)</h2>
+    <div class="nav-bar">
+        <ul>
+            <li><a href="#one">Parte 1</a></li>
+            <li><a href="#two">Parte 2</a></li>
+            <li><a href="#three">Parte 3</a></li>
+        </ul>
+    </div>
+    <div class="section color-0" id="one"></div>
+    <div class="section color-1" id="two"></div>
+    <div class="section color-2" id="three"></div>
 </body>
 </html>
