Section-34 - Recriando o menu sozinho

--- a/Section-34/index.html
+++ b/Section-34/index.html
@@ -10,6 +10,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="menu">
+        <div class="menu-container">
+            <h1 class="logo">
+                <a href="">logo</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="">intro</a></li>
+                    <li><a href="">top 3</a></li>
+                    <li><a href="">gallery</a></li>
+                    <li><a href="">work</a></li>
+                    <li><a href="">contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <section class="main-bg section" id="home">
+        <div class="main-content">
+            <h1>teste</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam laudantium mollitia possimus illo amet fuga at ratione reprehenderit cum. Cupiditate iure doloremque explicabo recusandae repellat possimus soluta praesentium earum aspernatur!</p>
+        </div>
+    </section>
+    <section class="white-bg section">
+        <div class="main-content">
+            <h1>teste</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam laudantium mollitia possimus illo amet fuga at ratione reprehenderit cum. Cupiditate iure doloremque explicabo recusandae repellat possimus soluta praesentium earum aspernatur!</p>
+        </div>
+    </section>
     <section class="main-bg section">
         <div class="main-content">
             <h1>teste</h1>
